// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prepares initialState by field 1`] = `
Array [
  Immutable.Map {
    "fields": Immutable.Map {
      "first": Immutable.Map {
        "initial": Immutable.Map {
          "label": "First",
        },
      },
    },
  },
  "dispatch",
]
`;

exports[`prepares initialState by field 2`] = `
Array [
  Array [
    Object {
      "label": "First",
      "name": "first",
    },
    Object {
      "label": "Second",
      "name": "second",
      "type": "boolean",
    },
  ],
  Immutable.Map {
    "first": "firstValue",
    "second": "secondValue",
  },
  Object {},
]
`;

exports[`prepares initialState by field 3`] = `
Array [
  [Function],
  Immutable.Map {},
  [Function],
]
`;

exports[`useMemo update dispatches reset 1`] = `
Array [
  Object {
    "payload": "initial-state",
    "type": "reset",
  },
]
`;

exports[`uses memo to check for initialValues change 1`] = `
Array [
  [Function],
  Array [
    256481347,
  ],
]
`;
